--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,11 @@
 pipeline {
-    agent any
+    agent {
+    docker {
+        image 'ubuntu:22.04'
+        args '--privileged -v /var/run/docker.sock:/var/run/docker.sock'
+        reuseNode true
+    }
+}
 
     environment {
         DOCKERHUB_CREDENTIALS = credentials('github-creds')
